--- a/src/components/form/inputs/TextInput/TextInput.shoelace.css
+++ b/src/components/form/inputs/TextInput/TextInput.shoelace.css
@@ -1,4 +1,4 @@
-.textInput::part(form-control) {
+.textInputShoeLace::part(form-control) {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
   width: 100%;
@@ -10,17 +10,17 @@
   display: flex;
 }
 
-.textInput::part(form-control):focus-within {
+.textInputShoeLace::part(form-control):focus-within {
   box-shadow: 0 2px 0 #0c161c;
 }
 
-.textInput::part(input) {
+.textInputShoeLace::part(input) {
   width: 100%;
   border: none;
   background: transparent;
   outline: none;
 }
 
-.textInput::part(input):disabled {
+.textInputShoeLace::part(input):disabled {
   cursor: not-allowed;
 }
